Moving to Bootstrap for UI

--- a/rade-webapp/pom.xml
+++ b/rade-webapp/pom.xml
@@ -205,6 +205,33 @@
       <scope>runtime</scope>
     </dependency>
 
+    <!-- WebJars -->
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>webjars-locator</artifactId>
+      <version>0.36</version>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>bootstrap</artifactId>
+      <version>4.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>jquery</artifactId>
+      <version>3.3.1-2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>popper.js</artifactId>
+      <version>1.14.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>font-awesome</artifactId>
+      <version>5.7.1</version>
+    </dependency>
+
     <!-- Database drivers -->
     <dependency>
       <groupId>org.apache.derby</groupId>
