Finish moving to Bootstrap for UI

--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -63,6 +63,7 @@ spring.mvc.locale=fr
 spring.messages.basename=i18n/messages
 server.error.whitelabel.enabled=false
 server.error.include-stacktrace=always
+spring.resources.cache.cachecontrol.max-age=86400
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
