--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
     <spring-security.version>5.1.3.RELEASE</spring-security.version>
     <spring-batch.version>4.1.1.RELEASE</spring-batch.version>
     <hibernate.version>5.4.1.Final</hibernate.version>
-    <cxf.version>3.2.7</cxf.version>
+    <cxf.version>3.3.0</cxf.version>
     <cglib.version>3.2.10</cglib.version>
     <slf4j.version>1.7.25</slf4j.version>
     <logback.version>1.2.3</logback.version>
@@ -327,6 +327,32 @@
         <groupId>org.apache.poi</groupId>
         <artifactId>poi</artifactId>
         <version>4.0.1</version>
+      </dependency>
+      <!-- WebJars -->
+      <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>webjars-locator</artifactId>
+        <version>0.36</version>
+      </dependency>
+      <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>bootstrap</artifactId>
+        <version>4.2.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>jquery</artifactId>
+        <version>3.3.1-2</version>
+      </dependency>
+      <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>popper.js</artifactId>
+        <version>1.14.6</version>
+      </dependency>
+      <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>font-awesome</artifactId>
+        <version>5.7.1</version>
       </dependency>
       <!-- Dependencies for Unit Testing -->
       <dependency>
