Clean up JSPs by making a custom tag & other minor changes

--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -57,7 +57,7 @@ app.name=Rade Dev
 
 # Spring MVC configuration
 spring.main.allow-bean-definition-overriding=true
-spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.mvc.locale=fr
 spring.messages.basename=i18n/messages
