Small cleanups and corrections

--- a/rade-common/src/main/resources/version.properties
+++ b/rade-common/src/main/resources/version.properties
@@ -18,7 +18,7 @@
 version=${project.version}
 revision=${buildNumber}
 timestamp=${timestamp}
-build.java.version=${java.version}
+build.java.version=${java.target}
 build.spring.version=${spring.version}
 build.spring-boot.version=${spring-boot.version}
 build.spring-data.version=${spring-data.version}
@@ -28,3 +28,7 @@ build.hibernate.version=${hibernate.version}
 build.cxf.version=${cxf.version}
 build.cglib.version=${cglib.version}
 build.slf4j.version=${slf4j.version}
+build.bootstrap.version=${bootstrap.version}
+build.jquery.version=${jquery.version}
+build.popper.version=${popper.version}
+build.fontawesome.version=${fontawesome.version}
