--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
     <timestamp>${maven.build.timestamp}</timestamp>
     <!-- Major dependency versions to ensure coherence among subprojects -->
-    <java.version>1.8</java.version>
+    <java.target>1.8</java.target>
     <spring.version>5.1.5.RELEASE</spring.version>
     <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
     <spring-data.version>2.1.5.RELEASE</spring-data.version>
@@ -56,8 +56,12 @@
     <hibernate.version>5.4.1.Final</hibernate.version>
     <cxf.version>3.3.0</cxf.version>
     <cglib.version>3.2.10</cglib.version>
-    <slf4j.version>1.7.25</slf4j.version>
+    <slf4j.version>1.7.26</slf4j.version>
     <logback.version>1.2.3</logback.version>
+    <bootstrap.version>4.3.1</bootstrap.version>
+    <jquery.version>3.3.1-2</jquery.version>
+    <popper.version>1.14.6</popper.version>
+    <fontawesome.version>5.7.2</fontawesome.version>
     <!-- Other properties -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.scm.id>github</project.scm.id> <!-- set username/password in settings.xml -->
@@ -232,7 +236,7 @@
       <dependency>
         <groupId>com.fasterxml.jackson.jaxrs</groupId>
         <artifactId>jackson-jaxrs-json-provider</artifactId>
-        <version>2.9.7</version>
+        <version>2.9.8</version>
       </dependency>
       <dependency>
         <groupId>javax.xml.ws</groupId>
@@ -279,7 +283,7 @@
       <dependency>
         <groupId>org.hibernate.validator</groupId>
         <artifactId>hibernate-validator</artifactId>
-        <version>6.0.14.Final</version>
+        <version>6.0.15.Final</version>
       </dependency>
       <dependency>
         <groupId>javax.el</groupId>
@@ -337,22 +341,22 @@
       <dependency>
         <groupId>org.webjars</groupId>
         <artifactId>bootstrap</artifactId>
-        <version>4.3.1</version>
+        <version>${bootstrap.version}</version>
       </dependency>
       <dependency>
         <groupId>org.webjars</groupId>
         <artifactId>jquery</artifactId>
-        <version>3.3.1-2</version>
+        <version>${jquery.version}</version>
       </dependency>
       <dependency>
         <groupId>org.webjars</groupId>
         <artifactId>popper.js</artifactId>
-        <version>1.14.6</version>
+        <version>${popper.version}</version>
       </dependency>
       <dependency>
         <groupId>org.webjars</groupId>
         <artifactId>font-awesome</artifactId>
-        <version>5.7.2</version>
+        <version>${fontawesome.version}</version>
       </dependency>
       <!-- Dependencies for Unit Testing -->
       <dependency>
@@ -446,8 +450,8 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
           <configuration>
-            <source>${java.version}</source>
-            <target>${java.version}</target>
+            <source>${java.target}</source>
+            <target>${java.target}</target>
           </configuration>
         </plugin>
         <!-- Spring Boot (builds all in one JAR) -->
