--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -27,21 +27,31 @@
 
 # Application Information (filtered from pom.xml)
 # Displayed in browser at /actuator/info
-info.app.name=${project.name}
+info.app.name=Rade
+info.app.project=${project.name}
+info.app.group=${project.groupId}
+info.app.artifact=${project.artifactId}
 info.app.version=${project.version}
+info.app.source.java=${java.target}
 info.app.build.revision=${buildNumber}
 info.app.build.timestamp=${timestamp}
-info.app.build.java=${java.version}
-info.app.build.spring=${spring.version}
-info.app.build.spring-boot=${spring-boot.version}
-info.app.build.spring-data=${spring-data.version}
-info.app.build.spring-security=${spring-security.version}
-info.app.build.spring-batch=${spring-batch.version}
-info.app.build.hibernate=${hibernate.version}
-info.app.build.cxf=${cxf.version}
-info.app.build.cglib=${cglib.version}
-info.app.build.slf4j=${slf4j.version}
-info.app.build.logback=${logback.version}
+info.app.build.os=${os.name} (${os.arch}) (${os.version})
+info.app.build.java=${java.version} (${java.vendor})
+info.app.build.maven=${maven.version}
+info.app.dependencies.spring=${spring.version}
+info.app.dependencies.spring-boot=${spring-boot.version}
+info.app.dependencies.spring-data=${spring-data.version}
+info.app.dependencies.spring-security=${spring-security.version}
+info.app.dependencies.spring-batch=${spring-batch.version}
+info.app.dependencies.hibernate=${hibernate.version}
+info.app.dependencies.cxf=${cxf.version}
+info.app.dependencies.cglib=${cglib.version}
+info.app.dependencies.slf4j=${slf4j.version}
+info.app.dependencies.logback=${logback.version}
+info.app.dependencies.bootstrap=${bootstrap.version}
+info.app.dependencies.jquery=${jquery.version}
+info.app.dependencies.popper=${popper.version}
+info.app.dependencies.fontawesome=${fontawesome.version}
 
 # Database Configuration (injected into application-context if configured)
 #db.driver=oracle.jdbc.OracleDriver
