--- a/pom.xml
+++ b/pom.xml
@@ -466,6 +466,11 @@
           <artifactId>cxf-codegen-plugin</artifactId>
           <version>${cxf.version}</version>
         </plugin>
+        <plugin>
+          <groupId>net.alchim31.maven</groupId>
+          <artifactId>yuicompressor-maven-plugin</artifactId>
+          <version>1.5.1</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
