--- a/rade-rpm/pom.xml
+++ b/rade-rpm/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>fr.aesn.rade</groupId>
     <artifactId>rade</artifactId>
-    <version>0.9-SNAPSHOT</version>
+    <version>0.9</version>
   </parent>
   <artifactId>rade-rpm</artifactId>
   <packaging>${rpm.artifact}</packaging>
