--- a/rade-persist/pom.xml
+++ b/rade-persist/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>fr.aesn.rade</groupId>
     <artifactId>rade</artifactId>
-    <version>0.9</version>
+    <version>0.10-SNAPSHOT</version>
   </parent>
   <artifactId>rade-persist</artifactId>
   <packaging>jar</packaging>
