--- a/pom.xml
+++ b/pom.xml
@@ -383,6 +383,19 @@
         <version>10.14.2.0</version>
         <scope>runtime</scope>
       </dependency>
+      <dependency>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-all</artifactId>
+          <version>1.3</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-all</artifactId>
+          <version>1.10.19</version>
+          <scope>test</scope>
+          <type>jar</type>
+      </dependency>
       <!-- Dependencies provided by Application Servers -->
       <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
