Corrections (premier pasage)
Notons les points suivants:
* Pas besoin d'ajouter une dépendence mockito car elle existait déjà
* Utilisons la version la plus récente de Hamcrest (2.1 au lieu de 1.3)
* Supprimons les données tests Hexaposte qui ne sont pas nécessaire.
* Indiquons que AbstractTestController est basé (copie intégrale) de AbstractTestService mais ajoutons une annotation ComponentScan pour pouvoir accèder les Services avec @Autowired
* Supprimer l'annotation @slf4j et les appels à log du test (qu'est ce que tu va logguer dans un test? si ça ne marche pas on ne loggue rien on balance l'exception et le test échoue)
* supprime les JPA DAO et les initialisations de services qui sont instanciés en arrière plan (voir ScanComponent)

Reste à faire
* Ajouter plus de test (différents critères de recherche, ex: avec ou sans date, et compter les records retourné)

--- a/rade-webapp/pom.xml
+++ b/rade-webapp/pom.xml
@@ -253,6 +253,13 @@
       <artifactId>poi</artifactId>
     </dependency>
 
+    <!-- Unit Testing -->
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <!-- Servlet -->
     <dependency>
       <groupId>org.apache.tomcat.embed</groupId>
@@ -272,17 +279,6 @@
       <groupId>org.apache.taglibs</groupId>
       <artifactId>taglibs-standard-impl</artifactId>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-all</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <scope>test</scope>
-      <type>jar</type>
     </dependency>
   </dependencies>
 
