--- a/rade-webapp/pom.xml
+++ b/rade-webapp/pom.xml
@@ -259,6 +259,11 @@
       <artifactId>hamcrest</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <scope>test</scope>
+    </dependency>
 
     <!-- Servlet -->
     <dependency>
