--- a/pom.xml
+++ b/pom.xml
@@ -48,20 +48,20 @@
     <timestamp>${maven.build.timestamp}</timestamp>
     <!-- Major dependency versions to ensure coherence among subprojects -->
     <java.target>1.8</java.target>
-    <spring.version>5.1.5.RELEASE</spring.version>
-    <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
-    <spring-data.version>2.1.5.RELEASE</spring-data.version>
-    <spring-security.version>5.1.4.RELEASE</spring-security.version>
-    <spring-batch.version>4.1.1.RELEASE</spring-batch.version>
+    <spring.version>5.1.7.RELEASE</spring.version>
+    <spring-boot.version>2.1.5.RELEASE</spring-boot.version>
+    <spring-data.version>2.1.8.RELEASE</spring-data.version>
+    <spring-security.version>5.1.5.RELEASE</spring-security.version>
+    <spring-batch.version>4.1.2.RELEASE</spring-batch.version>
     <hibernate.version>5.4.2.Final</hibernate.version>
-    <cxf.version>3.3.1</cxf.version>
-    <cglib.version>3.2.10</cglib.version>
+    <cxf.version>3.3.2</cxf.version>
+    <cglib.version>3.2.12</cglib.version>
     <slf4j.version>1.7.26</slf4j.version>
     <logback.version>1.2.3</logback.version>
     <bootstrap.version>4.3.1</bootstrap.version>
-    <jquery.version>3.3.1-2</jquery.version>
-    <popper.version>1.14.7</popper.version>
-    <fontawesome.version>5.8.1</fontawesome.version>
+    <jquery.version>3.4.1</jquery.version>
+    <popper.version>1.15.0</popper.version>
+    <fontawesome.version>5.8.2</fontawesome.version>
     <!-- Other properties -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.scm.id>github</project.scm.id> <!-- set username/password in settings.xml -->
@@ -310,7 +310,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.8.1</version>
+        <version>3.9</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -330,7 +330,7 @@
       <dependency>
         <groupId>org.apache.poi</groupId>
         <artifactId>poi</artifactId>
-        <version>4.0.1</version>
+        <version>4.1.0</version>
       </dependency>
       <!-- WebJars -->
       <dependency>
@@ -393,7 +393,7 @@
       <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
         <artifactId>tomcat-embed-jasper</artifactId>
-        <version>9.0.17</version>
+        <version>9.0.20</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -454,7 +454,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+          <version>3.8.1</version>
           <configuration>
             <source>${java.target}</source>
             <target>${java.target}</target>
@@ -502,7 +502,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.1.1</version>
+        <version>3.1.2</version>
         <configuration>
           <archive>
             <manifest>
@@ -615,7 +615,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.0.1</version>
+        <version>3.1.0</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
