[maven-release-plugin] prepare release rade-0.10

--- a/rade-batchrunner/pom.xml
+++ b/rade-batchrunner/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>fr.aesn.rade</groupId>
     <artifactId>rade</artifactId>
-    <version>0.10-SNAPSHOT</version>
+    <version>0.10</version>
   </parent>
   <artifactId>rade-batchrunner</artifactId>
   <packaging>jar</packaging>
